@@ -2,7 +2,7 @@ package us.crast.mondochest;
 
 public final class MondoConstants {
 	public static final String APP_NAME = "MondoChest";
-	public static final String MONDOCHEST_VERSION = "0.5.3pre1";
+	public static final String MONDOCHEST_VERSION = "0.5.3pre2";
 	
 	public static final String MASTER_SIGN_NAME = "[MondoChest]";
 	public static final String SLAVE_SIGN_NAME = "[MondoSlave]";
